apps/base/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: tools
  labels:
    app.kubernetes.io/part-of: gitops-k8s-platform
    app.kubernetes.io/name: podinfo
  annotations:
    cert-manager.io/cluster-issuer: placeholder-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.placeholder.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
  tls:
    - hosts:
        - podinfo.placeholder.local
      secretName: podinfo-ingress-secret
